<resources>
    <string name="app_name">calorie-calendar</string>
    <string name="title_home">Home</string>
    <string name="title_add">Add</string>
    <string name="title_calendar">Calendar</string>
    <string name="meal">Meal:</string>
    <string name="g">g</string>
    <string name="calories">Calories:</string>
    <string name="protein">Protein:</string>
    <string name="fat">Fat:</string>
    <string name="carbohydrates">Carbohydrates:</string>
    <string name="fiber">Fiber:</string>
    <string name="sodium">Sodium:</string>
    <string name="sugar">Sugar:</string>
    <string-array name="Meals">
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
        <item>Snack</item>
    </string-array>
</resources>